test/error/parse/MaybeAssignInsteadEqual.mod
MODULE MaybeAssignInsteadEqual;
VAR a: INTEGER;
BEGIN
  a = 1;
END MaybeAssignInsteadEqual.
